--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,4 @@
+@import "../../vendor/wire-elements/pro/resources/css/tailwind/overlay-component.css";
 @import 'tailwindcss';
 @import "flowbite/src/themes/default.css";
 
@@ -8,9 +9,15 @@
 @source '../**/*.blade.php';
 @source '../**/*.js';
 @source "../../node_modules/flowbite";
-
+@source '../../vendor/wire-elements/pro/config/wire-elements-pro.php';
+@source '../../vendor/wire-elements/pro/**/*.blade.php';
 
 @theme {
     --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
         'Segoe UI Symbol', 'Noto Color Emoji';
+}
+
+.wep-modal-content,
+.wep-slide-over-container-inner-wrap {
+    @apply motion-reduce:transition-none;
 }
