--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -14,6 +14,7 @@
 @source '../../app/Livewire/**/*Table.php';
 @source '../../vendor/power-components/livewire-powergrid/src/Themes/Tailwind.php';
 @source '../../vendor/power-components/livewire-powergrid/resources/views/**/*.php';
+@source '../../vendor/masmerise/livewire-toaster/resources/views/*.blade.php';
 
 @theme {
     --color-primary-50: #eff6ff;
