--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -28,16 +28,16 @@
     --color-primary-800: #1e40af;
     --color-primary-900: #1e3a8a;
 
-    --color-pg-primary-50: oklch(0.985 0 0);
-    --color-pg-primary-100: oklch(0.97 0 0);
-    --color-pg-primary-200: oklch(0.922 0 0);
-    --color-pg-primary-300: oklch(0.87 0 0);
-    --color-pg-primary-400: oklch(0.708 0 0);
-    --color-pg-primary-500: oklch(0.556 0 0);
-    --color-pg-primary-600: oklch(0.439 0 0);
-    --color-pg-primary-700: oklch(0.371 0 0);
-    --color-pg-primary-800: oklch(0.269 0 0);
-    --color-pg-primary-900: oklch(0.205 0 0);
+    --color-pg-primary-50: #F9FAFB;
+    --color-pg-primary-100: #F3F4F6;
+    --color-pg-primary-200: #E5E7EB;
+    --color-pg-primary-300: #D1D5DB;
+    --color-pg-primary-400: #9CA3AF;
+    --color-pg-primary-500: #6B7280;
+    --color-pg-primary-600: #4B5563;
+    --color-pg-primary-700: #374151;
+    --color-pg-primary-800: #1F2937;
+    --color-pg-primary-900: #111827;
     --color-pg-primary-950: oklch(0.145 0 0);
 
     --font-sans: 'Inter', 'ui-sans-serif', 'system-ui', '-apple-system', 'system-ui', 'Segoe UI', 'Roboto', 'Helvetica Neue', 'Arial', 'Noto Sans', 'sans-serif', 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
