--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -12,6 +12,8 @@
 @source '../../vendor/elegantly/livewire-modal/resources/views/**/*.blade.php",';
 @source '../../app/Livewire/*Table.php';
 @source '../../app/Livewire/**/*Table.php';
+@source '../../vendor/quickpanel/platform/QuickPanel/Platfrom/Livewire/*Table.php';
+@source '../../vendor/quickpanel/platform/QuickPanel/Platfrom/Livewire/**/*Table.php';
 @source '../../vendor/power-components/livewire-powergrid/src/Themes/Tailwind.php';
 @source '../../vendor/power-components/livewire-powergrid/resources/views/**/*.php';
 @source '../../vendor/masmerise/livewire-toaster/resources/views/*.blade.php';
