--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -13,7 +13,8 @@
 @source '../../app/Livewire/*Table.php';
 @source '../../app/Livewire/**/*Table.php';
 @source '../../vendor/quickpanel/platform/QuickPanel/Platfrom/Livewire/*Table.php';
-@source '../../vendor/quickpanel/platform/QuickPanel/Platfrom/Livewire/**/*Table.php';
+@source '../../vendor/quickpanel/platform/QuickPanel/Platfrom/Livewire/**/*Table.phدp';
+@source '../../vendor/quickpanel/platform/resources/views/**/*.php';
 @source '../../vendor/power-components/livewire-powergrid/src/Themes/Tailwind.php';
 @source '../../vendor/power-components/livewire-powergrid/resources/views/**/*.php';
 @source '../../vendor/masmerise/livewire-toaster/resources/views/*.blade.php';
